objects/AccountObjective__c.object
<CustomObject>
    <description>Account Objective is a custom object used to record and manage customer-instances of predefined strategic Objectives used in Account Planning. Account Objectives can be linked to an Observation and a Solution, but it is not required.</description>
    <fields>
        <fullName>Account_Objective_Source__c</fullName>
        <description>The source of the Account Objective.</description>
        <inlineHelpText>The source of the Account Objective. Users can enter in other choices besides what is in the standard list.</inlineHelpText>
        <label>Account Objective Source</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Customer Meeting</fullName>
                </value>
                <value>
                    <fullName>Annual Report</fullName>
                </value>
                <value>
                    <fullName>Article</fullName>
                </value>
                <value>
                    <fullName>Executive</fullName>
                </value>
                <value>
                    <fullName>Partner</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Account_Plan__c</fullName>
        <label>Account Plan</label>
        <referenceTo>Account_Plan__c</referenceTo>
        <relationshipLabel>Account Objectives</relationshipLabel>
        <relationshipName>Account_Objectives</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Account_Solution__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The linked Account Solution for this Account Objective.</description>
        <inlineHelpText>The linked Account Solution for this Account Objective.</inlineHelpText>
        <label>Account Solution</label>
        <referenceTo>AccountSolution__c</referenceTo>
        <relationshipLabel>Account Objectives</relationshipLabel>
        <relationshipName>Account_Objectives</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Account Objectives</relationshipLabel>
        <relationshipName>Account_Objectives</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Active Checkbox</description>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Business_Objective__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Business Objective</label>
        <referenceTo>AccountObjective__c</referenceTo>
        <relationshipLabel>Account Objectives</relationshipLabel>
        <relationshipName>Business_Objectives</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contact_Relationship__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Contact</label>
        <referenceTo>ContactRelationship__c</referenceTo>
        <relationshipLabel>Account Objectives</relationshipLabel>
        <relationshipName>Account_Objectives</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Account Objectives</relationshipLabel>
        <relationshipName>Account_Objectives</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <description>A detailed description of the Account Observation record from the point of view of your customer.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>A detailed description of the Account Observation record from the point of view of your customer.</inlineHelpText>
        <label>Description</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>External_ID__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Impact__c</fullName>
        <description>A detailed description of the impact that the Account Observation has on your company and its relationship with your customer.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>A detailed description of the impact that the Account Observation has on your company and its relationship with your customer.</inlineHelpText>
        <label>Impact</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Is_Client_Objective__c</fullName>
        <formula>IF(ISPICKVAL(Type__c, &quot;Corporate&quot;) ||  ISPICKVAL(Type__c, &quot;Workforce&quot;)  || ISPICKVAL(Type__c, &quot;Total Rewards&quot;), &quot;Y&quot;, &quot;N&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Client Objective</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Objective_End_Date__c</fullName>
        <description>The End Date of this Objective record.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>The End Date of this Objective record.</inlineHelpText>
        <label>Objective End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Objective_Reached__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Designates if this objective record has been reached.</description>
        <inlineHelpText>Designates if this objective record has been reached.</inlineHelpText>
        <label>Objective Reached</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Objective_Start_Date__c</fullName>
        <description>The Start Date of this Objective record.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>The Start Date of this Objective record.</inlineHelpText>
        <label>Objective Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Objective__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Objective Library</label>
        <referenceTo>CustomerObjective__c</referenceTo>
        <relationshipLabel>Account Objectives</relationshipLabel>
        <relationshipName>Account_Objectives1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Other_Name__c</fullName>
        <formula>IF( ISBLANK(Other_Objective__c), Name, Name + &quot; [&quot; + Other_Objective__c + &quot;]&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Other Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Objective__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Other Objective</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Account_Objectives</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Rank__c</fullName>
        <label>Rank</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Strategic_Opportunity__c</fullName>
        <description>Strategic Opportunities</description>
        <label>Strategic Opportunities</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Innovative Solution</fullName>
                </value>
                <value>
                    <fullName>New Product/Program</fullName>
                </value>
                <value>
                    <fullName>Relationship Building</fullName>
                </value>
                <value>
                    <fullName>Core Service Execution</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Corporate</fullName>
                </value>
                <value>
                    <fullName>Workforce</fullName>
                </value>
                <value>
                    <fullName>Total Rewards</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Account Objective</label>
    <listViews>
        <fullName>Active</fullName>
        <columns>NAME</columns>
        <columns>Type__c</columns>
        <columns>Active__c</columns>
        <columns>Objective__c</columns>
        <columns>Rank__c</columns>
        <columns>Description__c</columns>
        <columns>Business_Objective__c</columns>
        <columns>Strategic_Opportunity__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Account__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Active__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Active</label>
    </listViews>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Type__c</columns>
        <columns>Active__c</columns>
        <columns>Objective__c</columns>
        <columns>Rank__c</columns>
        <columns>Description__c</columns>
        <columns>Business_Objective__c</columns>
        <columns>Strategic_Opportunity__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Account Objective</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Account Objectives</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>